ResourceManager/ResourceWatcher: Make removeResource and addResource happen in the ResourceWatcher thread via a QAutoConnection, avoiding the thread unsafety of QDBusConnection and thus the crash. Add convenience functions to the ResourceWatcher that start and stop it if necessary, so that we don't have to jump back and forth between threads.

BUG: 305024
FIXED-IN: 4.10.2